breaking session into components

--- a/src/views/checkout.pug
+++ b/src/views/checkout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title checkout 
+    link(rel='stylesheet' href='bundle.css')
   body
     #root
     script(src='bundle.js')
