aligning sessions and child elements

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,6 @@
 @import './checkout/card-section/index';
 @import './checkout/card/index';
+@import './checkout/index';
 
 body, html {
 	margin: 0;
