--- a/src/components/checkout/card-section/index.scss
+++ b/src/components/checkout/card-section/index.scss
@@ -9,6 +9,11 @@
 		display: block;
 	}
 	&__subtitle {
+		display: flex;
+		align-items: center;
 		margin: 50px 0 31px 0;
+		&, & img {
+			margin-right: 15px;
+		}
 	}
 }
