--- a/src/components/checkout/card/index.scss
+++ b/src/components/checkout/card/index.scss
@@ -3,9 +3,19 @@
 	display: inline-block;
 	position: relative;
 	&__figcaption {
+		$shadow-height: 26px;
 		position: absolute;
 		top: 10%;
 		right: 10%;
 		left: 10%;
+		bottom: calc(10% + #{$shadow-height});
+		display: grid;
+		grid-template: 2fr 1fr 1fr / 1fr 1fr;
+	}
+	&__number, img {
+		grid-column: 1 / 3;
+	}
+	&__expiration {
+		justify-self: end;
 	}
 }
