--- a/src/components/checkout/card/index.scss
+++ b/src/components/checkout/card/index.scss
@@ -15,6 +15,12 @@
 	&__number, img {
 		grid-column: 1 / 3;
 	}
+	&__number {
+		grid-row: 2;
+	}
+	&__name, &__expiration {
+		grid-row: 3;
+	}
 	&__expiration {
 		justify-self: end;
 	}
